--- a/index.html
+++ b/index.html
@@ -105,12 +105,8 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              Hello there! I'm Kunal Chauhan, a passionate programmer and a creative website developer based in India. With a strong foundation in programming languages like C++ and an insatiable hunger to learn the concepts of Web Development, I thrive on turning innovative ideas into high-quality, user-friendly software and website solutions.
+            </p>
             </p>
           </div>
         </div>
